correct project create redirect and add trash icon

--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -7,7 +7,13 @@
     <h5>
       <%= project.customer.full_name %>
     </h5>
+
     <%= link_to 'Show', project, class: "hidden" %>
+  </div>
+  <div class="col-md-1 col-xs-1">
+    <%= link_to  project, data: { confirm: "Are you sure"},method: :delete do %>
+        <i class="fa fa-trash-o fa-lg" aria-hidden="true"></i>
+    <%end %>
   </div>
 </div>
 
