--- a/app/views/projects/create.js.erb
+++ b/app/views/projects/create.js.erb
@@ -1,4 +1,4 @@
-$('.book-list').prepend('<%=j render  @project.name %>');
+$('#book-list').prepend('<%=j render  @project %>');
 $("#show-form").trigger('reset');
 $(".message-form").slideUp();
 
