--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -10,6 +10,8 @@ div.test {
 
 .new-project {
   display: none;
+  width: 100%;
+  padding-left: 10px;
 }
 li.shadow {
   box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
