--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,3 @@
-<div class="container-fluid">
   <div class="form-horizontal">
     <%= form_for(@user, remote: true) do |f| %>
         <% if @user.errors.any? %>
@@ -12,7 +11,17 @@
               </ul>
             </div>
         <% end %>
+        <div class="form-group">
 
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :email, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.text_field :email, class: "form-control" %>
+            </div>
+          </div>
+        </div>
         <div class="form-group">
 
           <div class="row">
@@ -160,4 +169,3 @@
 
     <% end %>
   </div>
-</div>
