--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,7 @@
 
 
   <NewProject id="NewProject" class="new-project">
-    <%= render 'devise/registrations/new' %>
+    <%= render 'users/form' %>
   </NewProject>
 
 </div>
