--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,6 @@
   <div class="form-horizontal">
-    <%= form_for(@user, remote: true) do |f| %>
+    <%= devise_error_messages! %>
+    <%= form_for(@user) do |f| %>
         <% if @user.errors.any? %>
             <div id="error_explanation">
               <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -19,6 +20,28 @@
             </div>
             <div class=" col-sm-7">
               <%= f.text_field :email, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :password, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.password_field :password, class: "form-control" %>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+
+          <div class="row">
+            <div class="col-sm-2">
+              <%= f.label :password_confirmation, class: "control-label" %>
+            </div>
+            <div class=" col-sm-7">
+              <%= f.password_field :password_confirmation, class: "form-control" %>
             </div>
           </div>
         </div>
