--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
   <div class="form-horizontal">
     <%= devise_error_messages! %>
-    <%= form_for(@user) do |f| %>
+    <%= form_for(@user, remote: true) do |f| %>
         <% if @user.errors.any? %>
             <div id="error_explanation">
               <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
