--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,10 +27,10 @@
 
           <div class="row">
             <div class="col-sm-2">
-              <%= f.label :password, class: "control-label" %>
+              <%= f.label :password, class: "control-label" unless !@user.new_record? %>
             </div>
             <div class=" col-sm-7">
-              <%= f.password_field :password, class: "form-control" %>
+              <%= f.password_field :password, class: "form-control" unless !@user.new_record? %>
             </div>
           </div>
         </div>
@@ -38,10 +38,10 @@
 
           <div class="row">
             <div class="col-sm-2">
-              <%= f.label :password_confirmation, class: "control-label" %>
+              <%= f.label :password_confirmation, class: "control-label" unless !@user.new_record? %>
             </div>
             <div class=" col-sm-7">
-              <%= f.password_field :password_confirmation, class: "form-control" %>
+              <%= f.password_field :password_confirmation, class: "form-control" unless !@user.new_record? %>
             </div>
           </div>
         </div>
