--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,11 +53,19 @@
   </nav>
 <div id="menuhides" class="box menu-hide-mobile col-md-2 col-xs-0 sbar" style="height:100%;position: fixed; z-index: 2;">
       <ul class="menu" >
+        <% if can? :read, TimeSheet %>
           <li><%= link_to 'My Timesheets', time_sheets_path(current_user) %></li>
+        <% end %>
+        <% if can? :read, Invoice %>
           <li><%= link_to 'My Invoices', invoices_path(current_user) %></li>
+        <% end %>
+        <% if can? :read, Project %>
           <li><%= link_to 'My Projects', projects_path %></li>
+        <% end %>
+        <% if can? :read, Customer %>
           <li><%= link_to 'My Customers', customers_path %></li>
-        <% if can? :manage, User %>
+        <% end %>
+        <% if can? :read, User %>
           <li><%= link_to 'My Users', users_path %></li>
         <% end %>
         </ul>
