fucking cool as fucking tests

--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -1,4 +1,4 @@
-<li class="shadow user-<%= customer.id %>">
+<li class="shadow customer-<%= customer.id %>">
   <div class="row">
   <div class="col-sm-9">
     <h5>
