--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -42,7 +42,7 @@
           <%= current_user.address %> <br>
           ABN: <%= current_user.abn %></p>
 
-          <h1>For the <%= @project.name.humanize %> Project</h1>
+          <h1>For the <%= @project.name %> Project</h1>
         </td>
       </tr>
 
