--- a/app/views/time_sheets/_works.html.erb
+++ b/app/views/time_sheets/_works.html.erb
@@ -12,13 +12,13 @@
 
 
         <div class="field col-xs-3 col-sm-2">
-          <%= f.number_field :hour,min: 0,class: 'form-control', step: :any %>
+          <%= f.number_field :hour, min: 0, class: 'form-control hours-field', step: :any %>
         </div>
 
 
 
         <div class="field col-xs-12 col-sm-5">
-          <%= f.text_area :description, cols: "60", rows: "2" ,class: 'form-control'%>
+          <%= f.text_area :description, cols: "60", rows: "2", class: 'form-control description-field' %>
         </div>
 
 
