--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -185,8 +185,7 @@
           <div class="row">
 
 
-
-                <%= f.submit class: "btn btn-default pull-right" %>
+            <%= f.submit class: "create-user btn btn-default pull-right" %>
 
               </div>
 
