--- a/app/views/users/_pay_rates.html.erb
+++ b/app/views/users/_pay_rates.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td>
     <div class="field">
-      <%= f.number_field :rate %>
+      <%= f.number_field :rate, class: 'pay_rate' %>
       <p>This will update the users pay rate from today. All previous records will retain the same pay rate</p>
 
     </div>
