--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,9 @@
           <span class="icon-bar" ></span>
           <span class="icon-bar" ></span>
         </button>
+        <% if can? :manage, :all %>
         <a href="#" class="navbar-btn btn btn-success pull-left" id="menu-toggle" style="margin-right:  20px">Menu</a>
-
+        <% end %>
         <a class="navbar-brand" style="color: white" href="/"> Time Sheet</a>
       </div>
       <div class="collapse navbar-collapse">
@@ -51,6 +52,7 @@
           </div>
     </div>
   </nav>
+  <% if can? :manage, :all %>
 <div id="menuhides" class="box menu-hide-mobile col-md-2 col-xs-0 sbar" style="height:100%;position: fixed; z-index: 2;">
       <ul class="menu" >
         <% if can? :read, TimeSheet %>
@@ -70,12 +72,18 @@
         <% end %>
         </ul>
       </div>
+<% else %>
 
+<% end %>
+<% if can? :manage, :all %>
     <div id="bodysize" class="container-fluid  col-md-10 col-sm-12 pull-right body-container" style="z-index: 1;">
-      <br>
-      <%= yield %>
+<% else %>
+    <div id="bodysize" class="container-fluid  col-md-12 col-sm-12 pull-right body-container" style="z-index: 1;">
+<% end %>
+<br>
+<%= yield %>
 
-    </div>
+</div>
 </body>
 <!-- Copyright Start  -->
 
