set permissions for menu sidebar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 <body>
 
 
-  <nav class="navbar navbar-default navbar-fixed-top" " role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 
     <div class="container-fluid"style="background-color: #7C7C7C !important; color: white">
 
@@ -33,8 +33,10 @@
           <span class="icon-bar" ></span>
           <span class="icon-bar" ></span>
         </button>
-        <% if can? :manage, :all %>
+        <% if signed_in? %>
+            <% if current_user.has_any_role? :admin, {name: :read, resource: Project}, {name: :read, resource: Invoice}, {name: :read, resource: User} %>
         <a href="#" class="navbar-btn btn btn-success pull-left" id="menu-toggle" style="margin-right:  20px">Menu</a>
+            <% end %>
         <% end %>
         <a class="navbar-brand" style="color: white" href="/"> Time Sheet</a>
       </div>
@@ -52,7 +54,8 @@
           </div>
     </div>
   </nav>
-  <% if can? :manage, :all %>
+<% if signed_in? %>
+    <% if current_user.has_any_role? :admin, {name: :read, resource: Project}, {name: :read, resource: Invoice}, {name: :read, resource: User} %>
 <div id="menuhides" class="box menu-hide-mobile col-md-2 col-xs-0 sbar" style="height:100%;position: fixed; z-index: 2;">
       <ul class="menu" >
         <% if can? :read, TimeSheet %>
@@ -72,14 +75,13 @@
         <% end %>
         </ul>
       </div>
-<% else %>
-
-<% end %>
-<% if can? :manage, :all %>
-    <div id="bodysize" class="container-fluid  col-md-10 col-sm-12 pull-right body-container" style="z-index: 1;">
+        <div id="bodysize" class="container-fluid  col-md-10 col-sm-12 pull-right body-container" style="z-index: 1;">
+    <% end %>
 <% else %>
     <div id="bodysize" class="container-fluid  col-md-12 col-sm-12 pull-right body-container" style="z-index: 1;">
+
 <% end %>
+
 <br>
 <%= yield %>
 
