--- a/app/views/users/_pay_table.html.erb
+++ b/app/views/users/_pay_table.html.erb
@@ -1,6 +1,7 @@
-</tr>
 <tr>
-  <td><%= u[:pay] %></td>
-  <td><%= u[:date].strftime("%A %b %d ") %></td>
-  <td><%= u[:project] %></td>
+  <td><%= @sub_total[:sub_totals][i] %></td>
+  <td><%= u.hour %></td>
+  <td><%= @user.rate(u.time_sheet.time_period) %></td>
+  <td><%= u.time_sheet.time_period.strftime("%A %b %d ") %></td>
+  <td><%= u.project.name %></td>
 </tr>
