--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 
-    <div class="container-fluid"style="background-color: #7C7C7C !important; color: white">
+  <div class="container-fluid" style="background-color: #7C7C7C !important; color: white">
 
       <div class="navbar-header" style="padding-left: 20px;color: white">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -42,12 +42,9 @@
       <div id="navbar" class="navbar-collapse collapse">
         <p class="navbar-text pull-right" style="color: white" >
           <% if user_signed_in? %>
-              Logged in as <strong><%= current_user.email %></strong>
-              <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link', style:"color: white"%> |
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link' , style:"color: white"%> |
-              <%= link_to "Identities", user_identities_path(current_user), :class => 'navbar-link' , style:"color: white"%>
+              Logged in as <strong><%= current_user.full_name %></strong>
+              <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link', style: "color: white" %>
           <% else %>
-              <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link' , style:"color: white"%> |
               <%= link_to "Login", new_user_session_path, :class => 'navbar-link' , style:"color: white"%>|
           <% end %>
           </div>
@@ -84,6 +81,7 @@
 <% end %>
 
 <br>
+
 <%= yield %>
 
 </div>
