--- a/app/views/projects/_time_sheets_for_week.html.erb
+++ b/app/views/projects/_time_sheets_for_week.html.erb
@@ -1,12 +1,13 @@
 <div class="table-responsive">
   <table class="table outline table-striped table-hover">
     <tr class=" grey_backgound">
-      <th>UserName</th>
+      <th>User Name</th>
       <th>Date worked</th>
       <th>Rate</th>
       <th>Hours</th>
+      <th>Project Name</th>
       <th>Sub Total</th>
-      <th>project name</th>
+
     </tr>
     <% @time.each_with_index do |time, i | %>
 
@@ -16,7 +17,7 @@
         <td><%= time.time_period.strftime("%A %b %d ") %></td>
         <td><%= time.user.rate(time.time_period) %></td>
         <td>  <%= time.hour %> </td>
-        <td>  <%= time.project_id %> </td>
+        <td>  <%= Project.find(time.project_id).name %> </td>
         <td>$<%= @total_for_user[i] %></td></span></tr>
     <% end %>
     <td></td>
