--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,7 @@
-<div class="box">
-<p id="notice"><%= notice %></p>
-<div><h1><%= @user.full_name %></h1></div>
-</div><div class="box">
-<div class="btn-group">
-<%= link_to 'User Data', user_user_data_path(@user), remote: true, class: 'btn btn-default' %>
-  <%= link_to 'User Permission', user_user_permission_path(@user), remote: true, class: 'btn btn-default' %>
-<%= link_to 'User Income', user_user_income_path(@user), remote: true, class: 'btn btn-default' %>
-  <%= link_to 'Edit', edit_user_path(@user), remote: true, class: 'btn btn-default' %>
-  <%= link_to 'Back', users_path, class: 'btn btn-default'%>
-</div>
-</div>
+<%= render 'menu' %>
 
 <div  id="user_partial">
-<%= render 'users/user_details' %>
+
 </div>
 <div>
 </div>
