--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -11,3 +11,9 @@
     <%= link_to 'Back', users_path, class: 'btn btn-default' %>
   </div>
 </div>
+
+<div id="user_partial">
+  <%= render 'users/user_details' %>
+</div>
+<div>
+</div>
