--- a/app/views/users/_user_income.html.erb
+++ b/app/views/users/_user_income.html.erb
@@ -36,17 +36,18 @@
   </h1>
 
   <div id="user_income">
-    <%= will_paginate @user_table %>
+    <div id="page_links">
+      <%= will_paginate @user_table, remote: true, format: :js %>
+    </div>
     <%= render 'users/all_user_work' %>
-    <%= will_paginate @user_table %>
+
+    <div id="page_links">
+      <%= will_paginate @user_table, remote: true %>
+    </div>
 
   </div>
 
 </div>
 <script type="text/javascript">
-    function click_search() {
-        $('#search_project_button').click();
-        var text = $('#project_search').val();
-        $('#project_search_input').val(text);
-    }
+
 </script>
