add pagination to project show

--- a/app/views/projects/_time_sheets_for_week.html.erb
+++ b/app/views/projects/_time_sheets_for_week.html.erb
@@ -27,7 +27,7 @@
     <td></td>
     <td></td>
 
-    <td>total hours <%= @project.sum_time_sheet(@time) %>
+    <td>total hours <%= @project.sum_time_sheet(@project.all_time_sheets) %>
     </td>
 
     <td>total cost <%= @total %></td>
