user search form

--- a/app/views/users/user_income.js.erb
+++ b/app/views/users/user_income.js.erb
@@ -1,8 +1,8 @@
 $("div#user_content").html("<%= j render 'users/show.html.erb' %>");
 $('#user_partial').html("<%= j render 'user_income' %>");
+
+
 function click_search() {
-    $('#search_project_button').click();
-    var text = $('#project_search').val();
-    $('#project_search_input').val(text);
+    $('this').submit();
 }
 $('.pagination a').attr('data-remote', 'true');
