--- a/app/views/users/_user_income.html.erb
+++ b/app/views/users/_user_income.html.erb
@@ -1,36 +1,48 @@
 <div class="box">
-  <div class="row">
-    <div class="col-md-2">
-      <div class="dropdown show">
-        <a class="btn btn-default dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Select Projects
-        </a>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 
 
-          <%= form_tag user_user_income_path(@user), method: :get, format: :js, remote: true do %>
+  <%= form_tag user_user_income_path(@user), method: :get, remote: true do %>
+
+      <div class="row">
+        <div class="col-md-7">
+          <div class="btn-group">
+            <div class="dropdown show">
+              <a class="btn btn-default dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Select Projects
+              </a>
+
+              <button formaction=" <%= user_user_income_path(@user, format: 'pdf') %>" type="submit" class="btn btn-default">Pdf</button>
+              <button formaction=" <%= user_user_income_path(@user, format: 'csv') %>" type="submit" class="btn btn-default">Csv</button>
+              <button formaction=" <%= user_user_income_path(@user, format: 'xlsx') %>" type="submit" class="btn btn-default">Excel</button>
+              <%= submit_tag 'search', class: 'btn btn-default' %>
+
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+
               <%= select_tag(:project_search, options_for_select(Project.select_attributes, params[:project_search]),
                              size: Project.select_attributes.length+1,
                              multiple: true,
                              :include_blank => true,
-                             :onchange => "click_search()",
-                             class: 'overflow-hidden',
-                  ) %>
-              <%= submit_tag '', id: :search_project_button, remote: true, style: "display: none;" %>
-          <% end %>
-        </div>
-      </div>
 
-    </div>
-    <div class="col-md-4">
-      <%= form_tag user_user_income_path(@user), method: :get do %>
-          <%= hidden_field_tag :project_search, params[:project_search], id: 'project_search_input' %>
-          <button formaction=" <%= user_user_income_path(@user, format: 'pdf') %>" ,type="submit" , class="btn btn-default">Pdf</button>
-          <button formaction=" <%= user_user_income_path(@user, format: 'csv') %>" ,type="submit" , class="btn btn-default">Csv</button>
-          <button formaction=" <%= user_user_income_path(@user, format: 'xlsx') %>" ,type="submit" , class="btn btn-default">Excel</button>
-      <% end %>
-    </div>
-  </div>
+                             style: 'overflow-hidden',
+                  ) %>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <%= label_tag :start_date %>
+            <%= date_field_tag :start_date, params[:start_date], class: "form-control" %>
+
+
+            <%= label_tag :end_date %>
+            <%= date_field_tag :end_date, params[:end_date], class: "form-control" %>
+          </div>
+        </div>
+
+  <% end %>
+
   <h1>Total Income <%= @sub_total[:total] %>
     Superannuation <%= @sub_total[:superannuation] %>
   </h1>
@@ -47,7 +59,7 @@
 
   </div>
 
-</div>
+  </div>
 <script type="text/javascript">
 
 </script>
