--- a/app/views/users/_user_income.html.erb
+++ b/app/views/users/_user_income.html.erb
@@ -1,37 +1,38 @@
 <div class="box">
+  <div class="row">
+    <div class="col-md-3">
+      <%= form_tag user_user_income_path(@user), method: :get do %>
 
+          <button formaction=" <%= user_user_income_path(@user, format: 'pdf') %>" id="pdf" type="submit" class="btn btn-default">Pdf</button>
+          <button formaction=" <%= user_user_income_path(@user, format: 'csv') %>" id="csv" type="submit" class="btn btn-default">Csv</button>
+          <button formaction=" <%= user_user_income_path(@user, format: 'xlsx') %>" id="excel" type="submit" class="btn btn-default">Excel</button>
+      <% end %>
+    </div>
+    <%= form_tag user_user_income_path(@user), method: :get, remote: true do %>
 
-  <%= form_tag user_user_income_path(@user), method: :get, remote: true do %>
-
-      <div class="row">
-        <div class="col-md-7">
-          <div class="btn-group">
+        <div class="btn-group col-md-4">
             <div class="dropdown show">
               <a class="btn btn-default dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Select Projects
               </a>
 
-              <button formaction=" <%= user_user_income_path(@user, format: 'pdf') %>" type="submit" class="btn btn-default">Pdf</button>
-              <button formaction=" <%= user_user_income_path(@user, format: 'csv') %>" type="submit" class="btn btn-default">Csv</button>
-              <button formaction=" <%= user_user_income_path(@user, format: 'xlsx') %>" type="submit" class="btn btn-default">Excel</button>
-              <%= submit_tag 'search', class: 'btn btn-default' %>
+              <%= submit_tag 'search', class: 'btn btn-default', id: 'search' %>
 
               <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
 
-              <%= select_tag(:project_search, options_for_select(Project.select_attributes, params[:project_search]),
-                             size: Project.select_attributes.length+1,
-                             multiple: true,
-                             :include_blank => true,
+                <%= select_tag(:project_search, options_for_select(Project.select_attributes, params[:project_search]),
+                               size: Project.select_attributes.length+1,
+                               multiple: true,
+                               :include_blank => true,
 
-                             style: 'overflow-hidden',
-                  ) %>
+                               style: 'overflow-hidden',
+                    ) %>
               </div>
             </div>
-
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
+
+        <div class="col-md-5">
+          <div class="form-group">
             <%= label_tag :start_date %>
             <%= date_field_tag :start_date, params[:start_date], class: "form-control" %>
 
@@ -41,25 +42,28 @@
           </div>
         </div>
 
-  <% end %>
-
-  <h1>Total Income <%= @sub_total[:total] %>
-    Superannuation <%= @sub_total[:superannuation] %>
-  </h1>
-
-  <div id="user_income">
-    <div id="page_links">
-      <%= will_paginate @user_table, remote: true, format: :js %>
+        </div>
+    <% end %>
     </div>
-    <%= render 'users/all_user_work' %>
+</div>
 
-    <div id="page_links">
-      <%= will_paginate @user_table, remote: true %>
-    </div>
+<h1>Total Income <%= @sub_total[:total] %>
+  Superannuation <%= @sub_total[:superannuation] %>
+</h1>
 
+<div id="user_income">
+  <div id="page_links">
+    <%= will_paginate @user_table, remote: true, format: :js %>
+  </div>
+  <%= render 'users/all_user_work' %>
+
+  <div id="page_links">
+    <%= will_paginate @user_table, remote: true %>
   </div>
 
-  </div>
+</div>
+
+</div>
 <script type="text/javascript">
 
 </script>
