--- a/app/views/users/_user_income.html.erb
+++ b/app/views/users/_user_income.html.erb
@@ -1,6 +1,6 @@
 <div class="box">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-2">
       <%= form_tag user_user_income_path(@user), method: :get do %>
 
           <button formaction=" <%= user_user_income_path(@user, format: 'pdf') %>" id="pdf" type="submit" class="btn btn-default">Pdf</button>
@@ -10,7 +10,7 @@
     </div>
     <%= form_tag user_user_income_path(@user), method: :get, remote: true do %>
 
-        <div class="btn-group col-md-4">
+        <div class="btn-group col-md-3 pull-left">
             <div class="dropdown show">
               <a class="btn btn-default dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Select Projects
@@ -18,20 +18,20 @@
 
               <%= submit_tag 'search', class: 'btn btn-default', id: 'search' %>
 
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" style='overflow: hidden;'>
 
                 <%= select_tag(:project_search, options_for_select(Project.select_attributes, params[:project_search]),
                                size: Project.select_attributes.length+1,
                                multiple: true,
                                :include_blank => true,
 
-                               style: 'overflow-hidden',
+                               style: ' width: 100%',
                     ) %>
               </div>
             </div>
           </div>
 
-        <div class="col-md-5">
+        <div class="col-md-2">
           <div class="form-group">
             <%= label_tag :start_date %>
             <%= date_field_tag :start_date, params[:start_date], class: "form-control" %>
