--- a/app/views/users/_user_income.html.erb
+++ b/app/views/users/_user_income.html.erb
@@ -1,18 +1,18 @@
 <div class="box">
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-2 " style="padding-right: 0">
       <%= form_tag user_user_income_path(@user), method: :get do %>
 
-          <button formaction=" <%= user_user_income_path(@user, format: 'pdf') %>" id="pdf" type="submit" class="btn btn-default">Pdf</button>
-          <button formaction=" <%= user_user_income_path(@user, format: 'csv') %>" id="csv" type="submit" class="btn btn-default">Csv</button>
-          <button formaction=" <%= user_user_income_path(@user, format: 'xlsx') %>" id="excel" type="submit" class="btn btn-default">Excel</button>
+          <button formaction=" <%= user_user_income_path(@user, format: 'pdf') %>" id="pdf" type="submit" class="btn btn-default pull-right">Pdf</button>
+          <button formaction=" <%= user_user_income_path(@user, format: 'csv') %>" id="csv" type="submit" class="btn btn-default pull-right">Csv</button>
+          <button formaction=" <%= user_user_income_path(@user, format: 'xlsx') %>" id="excel" type="submit" class="btn btn-default pull-right">Excel</button>
       <% end %>
     </div>
     <%= form_tag user_user_income_path(@user), method: :get, remote: true do %>
 
-        <div class="btn-group col-md-3 pull-left">
+        <div class="btn-group col-md-3 pull-left" style="padding-left: 0">
             <div class="dropdown show">
-              <a class="btn btn-default dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="btn btn-default dropdown-toggle pull-left" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Select Projects
               </a>
 
