--- a/app/views/invoices/_invoice_table.html.erb
+++ b/app/views/invoices/_invoice_table.html.erb
@@ -1,5 +1,5 @@
 <table class="table table-bordered table-striped" style="width: 100%">
-  <tr class="grey_backgound">
+  <tr class="grey_background">
     <th>Employee</th>
     <th>Date worked</th>
     <th>Hours</th>
