--- a/app/views/projects/_time_sheets_for_week.html.erb
+++ b/app/views/projects/_time_sheets_for_week.html.erb
@@ -3,7 +3,7 @@
     <div id="page_links">
       <%= will_paginate @time %>
     </div>
-    <tr class=" grey_backgound">
+    <tr class=" grey_background">
       <th>User Name</th>
       <th>Date worked</th>
       <th>Rate</th>
