--- a/app/views/shared/_time_sheets_for_week.html.erb
+++ b/app/views/shared/_time_sheets_for_week.html.erb
@@ -4,7 +4,7 @@
 
 
   <table class="table outline table-striped table-hover">
-    <tr class=" grey_backgound">
+    <tr class=" grey_background">
       <th>Employee</th>
       <th>Date worked</th>
       <th>Rate</th>
