--- a/app/views/time_sheets/_form.html.erb
+++ b/app/views/time_sheets/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for( @time_sheet) do |f| %>
+<%= form_for(@time_sheet) do |f| %>
+    <div class="actions">
     <% if time_sheet.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(time_sheet.errors.count, "error") %> prohibited this time_sheet from being saved:</h2>
@@ -10,35 +11,28 @@
           </ul>
         </div>
     <% end %>
-
+    </div>
 
     <div class="actions">
       <%= f.submit "Save", class: 'btn btn-default' %>
-      <div  class= 'btn btn-default'>
-      <%= link_to_add_fields "Add field", f, :works, 'works'%>
-    </div>
+
+      <%= link_to_add_fields "Add field", f, :works, 'works' %>
+
     </div>
 
     <table class="outline table table-striped table-hover outline " style="  outline: 2px solid #ccc;">
-      <tr class="grey_backgound "  id="hours">
+      <tr class="grey_background " id="hours">
         <th class="col-xs-7 col-sm-4">Project</th>
         <th class="col-xs-3 col-sm-2">Hours</th>
         <th class="hidden-xs col-sm-6">Description</th>
 
-        <th class="col-sm-1 hidden-xs"> </th>
+        <th class="col-sm-1 hidden-xs"></th>
       </tr>
       <%= f.fields_for :works do |builder| %>
-
-
-      <%= render 'works', f: builder %>
-
-
-
+          <%= render 'works', f: builder %>
       <% end %>
-
-
       </tr>
-    </table >
+    </table>
     </div>
 
 <% end %>
