--- a/app/views/time_sheets/_works.html.erb
+++ b/app/views/time_sheets/_works.html.erb
@@ -1,34 +1,20 @@
 <tr style="  outline: 2px solid #ccc;">
   <td colspan="3">
-  <div class="row">
-
-  <div class="field dropdown col-xs-7 col-sm-4 "  >
 
 
+    <div class=" dropdown col-xs-7 col-sm-4 " style="padding: 0%;">
           <%= f.select(:project_id, options_for_select(Project.select_attributes,f.object.project_id),{},class: ' btn btn-default form-control') %>
-
   </div>
-
-
-
-        <div class="field col-xs-3 col-sm-2">
-          <%= f.number_field :hour, min: 0, class: 'form-control hours-field', step: :any %>
-        </div>
-
-
-
-        <div class="field col-xs-12 col-sm-5">
-          <%= f.text_area :description, cols: "60", rows: "2", class: 'form-control description-field' %>
-        </div>
-
-
-
-        <div class="field col-xs-1 col-sm-1">
-          <%= f.hidden_field :_destroy %>
-          <%= link_to "remove", '#', class: "remove_fields",style: 'text-overflow:hidden' %>
-        </div>
-
+    <div class=" col-xs-3 col-sm-2" style="padding: 0%">
+      <%= f.number_field :hour, min: 0, class: 'form-control hours-field', step: :any %>
+    </div>
+    <div class="field col-xs-12 col-sm-5">
+      <%= f.text_area :description, cols: "60", rows: "2", class: 'form-control description-field' %>
+    </div>
+    <div class="field col-xs-1 col-sm-1">
+      <%= f.hidden_field :_destroy %>
+      <%= link_to "remove", '#', class: "remove_fields", style: 'text-overflow:hidden' %>
+    </div>
 
   </td>
 </tr>
-</div>
