--- a/app/views/time_sheets/show.html.erb
+++ b/app/views/time_sheets/show.html.erb
@@ -4,35 +4,15 @@
 <p>
   <h1>Time Sheet for  <%= @time_sheet.time_period.strftime("%d %A %B %Y") %></h1>
 </p>
-
-  <div class="btn-group"></div>
-  <%= link_to 'Edit', edit_time_sheet_path(@time_sheet),class: 'btn btn-default' %>
-  <%= link_to 'Back', time_sheets_path,class: 'btn btn-default' %>
 </div>
 <div class="box">
-  <p>
-    <strong>User:</strong>
-    <%= @time_sheet.user.full_name %>
-  </p>
-<table class="outline table table-striped table-hover outline" style="width: 100%">
-  <tr class="grey_backgound">
-    <th>hours</th>
-    <th>project</th>
-    <th>description</th>
-
-    <th></th>
-  </tr>
-  <% @time_sheet.works.each do |w| %>
-  <tr>
-    <td><%= w.hour %></td>
-    <td><%= w.project_id %></td>
-    <td><%= w.description %></td>
-
-    <td><%=link_to 'delete', work_path( w.id), data: {confirm: 'Are you sure'}, method: :delete %></td>
-
-  </tr>
-  <% end %>
-</table>
+  <div class="btn-group"></div>
+  <%= link_to 'Back', root_path, class: 'btn btn-default' %>
+  <%= link_to 'Hours', edit_time_sheet_path(@time_sheet), class: 'btn btn-default', remote: true %>
+  <%= link_to 'Travel', time_sheet_travel_path(@time_sheet), remote: true, class: 'btn btn-default' %>
+</div>
+<div id="time_sheet_partial">
+  <%= render 'edit' %>
 </div>
 
 
