add travel details to timesheet

--- a/app/views/time_sheets/_travel.html.erb
+++ b/app/views/time_sheets/_travel.html.erb
@@ -17,7 +17,7 @@
       </div>
       <table class="outline table table-striped table-hover outline " style="  outline: 2px solid #ccc;">
         <tr class="grey_background " id="hours">
-          <th class="col-xs-12 col-sm-3">Travel Date</th>
+          <th class="col-xs-12 col-sm-3">Vehicle</th>
           <th class="hidden-xs col-sm-3">Odometer Start</th>
           <th class="hidden-xs col-sm-3">Odometer Finish</th>
         </tr>
