add travel details to timesheet

--- a/app/views/time_sheets/_travel.html.erb
+++ b/app/views/time_sheets/_travel.html.erb
@@ -23,7 +23,7 @@
         </tr>
         <%= f.fields_for :travels do |builder| %>
 
-            <%= render 'time_sheets/travel_show', f: builder %>
+            <%= render 'time_sheets/travel_fields', f: builder %>
 
         <% end %>
 
