add travel details to timesheet

--- a/app/views/identities/index.html.erb
+++ b/app/views/identities/index.html.erb
@@ -27,5 +27,5 @@
 
 
 
-<%= link_to 'New Google', '/users/auth/google' %>
-<%= link_to 'New facebook', '/users/auth/facebook' %>
+<%= link_to 'New Google', '/admin/auth/google' %>
+<%= link_to 'New facebook', '/admin/auth/facebook' %>
