--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,7 @@
       <div id="navbar" class="navbar-collapse collapse">
         <p class="navbar-text pull-right" style="color: white" >
           <% if user_signed_in? %>
+
               Logged in as <strong><%= current_user.full_name %></strong>
               <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link', style: "color: white" %>
           <% else %>
@@ -71,6 +72,7 @@
         <% if can? :read, User %>
           <li><%= link_to 'My Users', users_path %></li>
         <% end %>
+        <li><%= link_to 'Social Media Accounts', identities_path %></li>
         </ul>
       </div>
         <div id="bodysize" class="container-fluid  col-md-10 col-sm-12 pull-right body-container" style="z-index: 1;">
