--- a/app/views/identities/index.html.erb
+++ b/app/views/identities/index.html.erb
@@ -16,6 +16,7 @@
     <% @identities.each do |iden| %>
       <tr>
         <td><%= iden.provider %></td>
+        <td><%= iden.username %></td>
         <td><%= image_tag iden.image, size: 30 %></td>
         <td><%= link_to 'Show', iden %></td>
         <td><%= link_to 'Edit', edit_identity_path(iden) %></td>
