--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,6 +73,7 @@
           <li><%= link_to 'My Users', users_path %></li>
         <% end %>
         <li><%= link_to 'Social Media Accounts', identities_path %></li>
+        <li><%= link_to 'Chat', chat_rooms_path %></li>
         </ul>
       </div>
         <div id="bodysize" class="container-fluid  col-md-10 col-sm-12 pull-right body-container" style="z-index: 1;">
