--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,57 +25,65 @@
 
   <div class="container-fluid" style="background-color: #7C7C7C !important; color: white">
 
-      <div class="navbar-header" style="padding-left: 20px;color: white">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar" ></span>
-          <span class="icon-bar" ></span>
-          <span class="icon-bar" ></span>
-        </button>
-        <% if signed_in? %>
-            <% if current_user.has_any_role? :admin, {name: :read, resource: Project}, {name: :read, resource: Invoice}, {name: :read, resource: User} %>
-                <a href="#" class="navbar-btn btn btn-success pull-left" id="menu-toggle" style="margin-right:  20px">Menu</a>
-            <% end %>
-        <a class="navbar-brand" style="color: white" href="/"> Time Sheet</a>
-
-            </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <p class="navbar-text pull-right" style="color: white" >
-          <% if user_signed_in? %>
-
-              Logged in as <strong><%= current_user.full_name %></strong>
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link', style: "color: white" %>
-          <% else %>
-              <%= link_to "Login", new_user_session_path, :class => 'navbar-link' , style:"color: white"%>|
+    <div class="navbar-header" style="padding-left: 20px;color: white">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <% if signed_in? %>
+          <% if current_user.has_any_role? :admin, {name: :read, resource: Project}, {name: :read, resource: Invoice}, {name: :read, resource: User} %>
+              <a href="#" class="navbar-btn btn btn-success pull-left" id="menu-toggle" style="margin-right:  20px">Menu</a>
           <% end %>
-          </div>
-    </div>
+          <a class="navbar-brand" style="color: white" href="/"> Time Sheet</a>
 
-        <% end %>
-  </nav>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <p class="navbar-text pull-right" style="color: white">
+              <% if user_signed_in? %>
+
+                  Logged in as <strong><%= current_user.full_name %></strong>
+                  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link', style: "color: white" %>
+              <% else %>
+                  <%= link_to "Login", new_user_session_path, :class => 'navbar-link', style: "color: white" %>|
+              <% end %>
+              </div>
+          </div>
+
+      <% end %>
+      </nav>
 <% if signed_in? %>
     <% if current_user.has_any_role? :admin, {name: :read, resource: Project}, {name: :read, resource: Invoice}, {name: :read, resource: User} %>
-<div id="menuhides" class="box menu-hide-mobile col-md-2 col-xs-0 sbar" style="height:100%;position: fixed; z-index: 2;">
-      <ul class="menu" >
-        <% if can? :read, TimeSheet %>
-          <li><%= link_to 'My Timesheets', time_sheets_path(current_user) %></li>
-        <% end %>
-        <% if can? :read, Invoice %>
-          <li><%= link_to 'My Invoices', invoices_path(current_user) %></li>
-        <% end %>
-        <% if can? :read, Project %>
-          <li><%= link_to 'My Projects', projects_path %></li>
-        <% end %>
-        <% if can? :read, Customer %>
-          <li><%= link_to 'My Customers', customers_path %></li>
-        <% end %>
-        <% if can? :read, User %>
-          <li><%= link_to 'My Users', users_path %></li>
-        <% end %>
-        <li><%= link_to 'Social Media Accounts', identities_path %></li>
-        <li><%= link_to 'Chat', chat_rooms_path %></li>
-        </ul>
-      </div>
+        <div id="menuhides" class="box menu-hide-mobile col-md-2 col-xs-0 sbar" style="height:100%;position: fixed; z-index: 2;">
+          <ul class="menu">
+            <% if can? :read, TimeSheet %>
+                <li><%= link_to 'My Timesheets', time_sheets_path(current_user) %></li>
+            <% end %>
+            <% if can? :read, Invoice %>
+                <li><%= link_to 'My Invoices', invoices_path(current_user) %></li>
+            <% end %>
+            <% if can? :read, Project %>
+                <li><%= link_to 'My Projects', projects_path %></li>
+            <% end %>
+            <% if can? :read, Customer %>
+                <li><%= link_to 'My Customers', customers_path %></li>
+            <% end %>
+            <% if can? :read, User %>
+                <li><%= link_to 'My Users', users_path %></li>
+            <% end %>
+            <li><%= link_to 'Social Media Accounts', identities_path %></li>
+            <li><%= link_to 'Chat Rooms', chatrooms_path %></li>
+          </ul>
+
+          <h5>Chat Rooms </h5>
+          <ul class="menu">
+            <% current_user.chatrooms.each do |chatroom| %>
+
+                <li><%= link_to chatroom.title, chatroom, data: {behavior: "chatroom-link", chatroom_id: chatroom.id} %></li>
+            <% end %>
+          </ul>
+        </div>
         <div id="bodysize" class="container-fluid  col-md-10 col-sm-12 pull-right body-container" style="z-index: 1;">
     <% end %>
 <% else %>
@@ -85,7 +93,7 @@
 
 <br>
 <div id="user_content">
-<%= yield %>
+  <%= yield %>
 
 </div>
 </div>
