--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -17,7 +17,12 @@
 
 <ul data-behavior='messages' data-chatroom-id="<%= @chatroom.id %>">
   <% @messages.each do |message| %>
-
+      <% if @chatroom_user %>
+          <% if !unread_messages && @chatroom_user.last_read_at < message.created_at %>
+              <% unread_messages = true %>
+              <div class="strike"><span>Unread Messages</span></div>
+          <% end %>
+      <% end %>
       <%= render message %>
 
   <% end %>
