--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,7 @@
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
-
+<body data-user="<%= current_user.id if current_user.present? %>">
 
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 
