--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -195,6 +195,23 @@ th {
 
 }
 @media screen and (max-width: 1030px) {
+  li.mar-btm.message {
+    max-width: 95%;
+    min-width: 95%; /* This line changed */
+    float: right;
+    //background: rgba(0,0,0,0.1);
+    border-radius: 20px 20px 20px 20px;
+    padding: 10px 0px;
+    margin: 10px 0px;
+  }
+  .speech {
+    padding: 5px 5px;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+  }
+
   .menu-hide-mobile {
     visibility: hidden;
     clear: both;
