--- a/app/views/travels/show.html.erb
+++ b/app/views/travels/show.html.erb
@@ -32,7 +32,7 @@
 
 <p>
   <strong>Time sheet:</strong>
-  <%= @travel.time_sheet %>
+  <%= @travel.travel %>
 </p>
 
 <%= link_to 'Edit', edit_travel_path(@travel) %> |
