--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= work.hour %></td>
         <td><%= work.description %></td>
         <td><%= work.project %></td>
-        <td><%= work.time_sheet %></td>
+        <td><%= work.travel %></td>
         <td><%= link_to 'Show', work %></td>
         <td><%= link_to 'Edit', edit_work_path(work) %></td>
         <td><%= link_to 'Destroy', work, method: :delete, data: { confirm: 'Are you sure?' } %></td>
