--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Time sheet:</strong>
-  <%= @work.time_sheet %>
+  <%= @work.travel %>
 </p>
 
 <%= link_to 'Edit', edit_work_path(@work) %> |
