--- a/app/views/time_sheets/edit.html.erb
+++ b/app/views/time_sheets/edit.html.erb
@@ -2,10 +2,8 @@
   <h1>  <%= @time_sheet.user.full_name %></h1>
   <h2>   <%= @time_sheet.time_period.strftime("%d %A %B %Y") %></h2>
 </div>
-<div class="box btn-group" style="width: 100%">
-  <%= link_to 'Show', @time_sheet, class: 'btn btn-default' %>
-  <%= link_to 'Back', time_sheets_path, class: 'btn btn-default' %>
-</div>
+<%= render 'buttons' %>
+
 <div class="box">
   <%= render 'form', time_sheet: @time_sheet %>
 </div>
