--- a/app/views/travels/index.html.erb
+++ b/app/views/travels/index.html.erb
@@ -1,39 +1,21 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Travels</h1>
-
-<table>
-  <thead>
-  <tr>
-    <th>Travel date</th>
-    <th>Od start</th>
-    <th>Od finish</th>
-    <th>Purpose</th>
-    <th>User</th>
-    <th>Project</th>
-    <th>Time sheet</th>
-    <th colspan="3"></th>
+<div class="box">
+  <h1>Travel for  <%= @time_sheet.time_period.strftime("%d %A %B %Y") %></h1>
+</div>
+<%= render 'buttons' %>
+<div class="box">
+<table class="outline table table-striped table-hover outline " style="  outline: 2px solid #ccc;">
+  <tr class="grey_background " id="hours">
+    <th class="col-xs-12 col-sm-3">Vehicle</th>
+    <th class="hidden-xs col-sm-3">Odometer Start</th>
+    <th class="hidden-xs col-sm-3">Odometer Finish</th>
+    <th class="hidden-xs col-sm-3">Travel Perpose</th>
   </tr>
-  </thead>
-
-  <tbody>
   <% @travels.each do |travel| %>
-      <tr>
-        <td><%= travel.travel_date %></td>
-        <td><%= travel.od_start %></td>
-        <td><%= travel.od_finish %></td>
-        <td><%= travel.purpose %></td>
-        <td><%= travel.user %></td>
-        <td><%= travel.project %></td>
-        <td><%= travel.time_sheet %></td>
-        <td><%= link_to 'Show', travel %></td>
-        <td><%= link_to 'Edit', edit_travel_path(travel) %></td>
-        <td><%= link_to 'Destroy', travel, method: :delete, data: {confirm: 'Are you sure?'} %></td>
-      </tr>
+      <%= render 'travel_fields', f: travel %>
   <% end %>
-  </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Travel', new_travel_path %>
+</div>
+<%= link_to 'Add Travel', new_time_sheet_travel_path, class: 'btn btn-default' %>
