--- a/app/views/pay_rates/_form.html.erb
+++ b/app/views/pay_rates/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(pay_rate) do |f| %>
+<%= form_with(model: pay_rate, url: new_user_pay_rate_path, local: true) do |form| %>
   <% if pay_rate.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(pay_rate.errors.count, "error") %> prohibited this pay_rate from being saved:</h2>
@@ -12,21 +12,31 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :rate %>
-    <%= f.number_field :rate %>
+    <%= form.label :rate %>
+    <%= form.text_field :rate, id: :pay_rate_rate %>
   </div>
 
   <div class="field">
-    <%= f.label :project_id %>
-    <%= f.text_field :project_id %>
+    <%= form.label :holiday %>
+    <%= form.text_field :holiday, id: :pay_rate_holiday %>
   </div>
 
   <div class="field">
-    <%= f.label :user %>
-    <%= f.text_field :user %>
+    <%= form.label :superannuation %>
+    <%= form.text_field :superannuation, id: :pay_rate_superannuation %>
   </div>
 
+  <div class="field">
+    <%= form.label :project %>
+    <%= form.text_field :projects, id: :pay_rate_projects %>
+  </div>
+
+  <div class="field">
+    <%= form.label :date %>
+    <%= form.date_field :date, id: :pay_rate_date %>
+
+  </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= form.submit %>
   </div>
 <% end %>
